# qrammer

./: .gitignore  CMakeLists.txt  README.md  db.h
cmake/: compiler-flags.cmake  git.cmake
db/: .directory
qjlt/: .directory  CMakeLists.txt  ChangeLog.txt  QJLT  QJLT.pro  bmbox.cpp  bmbox.h  downloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgbox.h  practicewindow.cpp  practicewindow.h  res.qrc  search.cpp  snapshot.h
qjlt-db-utility/: .qmake.stash  CMakeLists.txt  QJLT-BDUtility  QJLT-BDUtility.pro  android-libQJLT-BDUtility.so-deployment-settings.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
qjlt/android/: AndroidManifest.xml  gradle.properties  local.properties
resources/: res.qrc  res.win.rc
src/common/: db.cpp  db.h  logger.cpp  logger.h  utils.cpp  utils.h
src/common/dto/: category.h  knowledge_unit.h
src/qrammer/: ChangeLog.txt  app_process  bmbox.ui  common.h  db.cpp  db.h  downloader.cpp  global_variables.cpp  global_variables.h  knowledge_unit.h  linker  logger.cpp  main.cpp  msgbox.cpp  msgbox.ui  snapshot.cpp  snapshot.h  utils.cpp  utils.h  window_cram.cpp  window_cram.h  window_cram.ui  window_cramming.cpp  window_cramming.h  window_cramming.ui  window_manage_db.cpp  window_manage_db.h  window_manage_db.ui  window_overview.cpp  window_overview.h  window_overview.ui  window_paramters.h
src/qrammer-db-util/: global_variables.cpp  global_variables.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/qrammer/dto/: category.h  knowledge_unit.h
src/qrammer/window/: cramming.cpp  cramming.h  cramming.ui  cramming_reminder.cpp  cramming_reminder.h  cramming_reminder.ui  manage_db.cpp  manage_db.h  manage_db.ui  overview.cpp  overview.h  overview.ui
src/qramming/: android-libQJLT.so-deployment-settings.json  downloader.cpp  main.cpp  snapshot.cpp  window_cram.cpp  window_cram.h  window_cram.ui  window_overview.cpp  window_overview.h  window_overview.ui
